# binderdemo

./: ITest.aidl  README.md
aidl/demo/: BinderData.aidl  ICallback.aidl  ITest.aidl
cpp/: Android.mk  CMakeLists.txt  ICallback.cpp  ITest.cpp  main.cpp
cpp/include/demo/: BnCallback.h  BnTest.h  BpCallback.h  BpTest.h  ICallback.h  ITest.h
java/: java_binder_test
java/src/demo/: BinderData.java  ICallback.java  ITest.java  Main.java  TestServer.java
simplestcall/: Android.mk
simplestcall/cpp/: SimplestCall.cpp
simplestcall/java/: Android.mk  java_call
simplestcall/java/src/simplestcall/: Main.java
